methods.picture.PatternPicture.scala.code
override def run() {
  faireTraitRV
}

def faireTraitRV(c: Color){
  setCouleurBrosse(c)
  avance()
  marquerSol()
  gauche()
  avance()
  droite()
  marquerSol()
  droite()
  avance()
  droite()
  
}



def marquerSol(){
	baisseBrosse()
	leveBrosse()